--- a/views/put-page.ejs
+++ b/views/put-page.ejs
@@ -5,7 +5,7 @@
   <title>Put Page</title>
 </head>
 <body>
-    <form action="/resource?_method=PUT" method="POST">
+    <form action="/?_method=PUT" method="POST">
         <button type="submit">Put Stuff</button>
     </form>
 
